# paw

./: .dockerignore  .editorconfig  .env.example  .envrc  .eslintrc.json  .gitattributes  .githooks-quickstart.md  .gitignore  .gitleaksignore  .gitmessage  .golangci.yml  .goreleaser.yml  .pre-commit-config.yaml  .prettierrc.json  .pylintrc  .secrets.baseline  .trivyignore  AGENTS.md  AGENT_PROGRESS.md  API_SECURITY_COMPLETE.md  ARCHITECTURE.md  ARCHITECTURE_ANALYSIS_TESTNET_READINESS.md  AUDIT_FINDINGS_INDEX.md  AUTHORS  BIP39_IMPLEMENTATION_SUMMARY.md  BUILD_SUCCESS_SUMMARY.md  CHANGELOG.md  CHANGES_LOG.txt  CHANGES_SUMMARY.md  CIRCUIT_BREAKER_IMPLEMENTATION.md  CI_CD_SETUP_GUIDE.md  CLAUDE.md  CLI_ENHANCEMENTS_REPORT.md  CLI_QUICK_REF.md  CODEX_PROGRESS  CODE_OF_CONDUCT.md  CODE_PATTERN_ANALYSIS.md  CODE_QUALITY_SUMMARY.md  COMPREHENSIVE_AUDIT_FINDINGS.md  CONTRIBUTING.md  (+160 more)
.claude/: CLAUDE.md
.github/: CODEOWNERS  DCO.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.husky/: commit-msg  pre-commit  pre-push
.kube/: config
.security/: .gosec.yml  README.md  config.yml  dependency-check-suppressions.xml
api/: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  RATE_LIMITING.md  RATE_LIMITING_QUICK_START.md  README.md  SECURITY_FIXES_REPORT.md  SECURITY_QUICK_START.md  api_test.go  audit_logger.go  docker-compose.yml  handlers_auth.go  handlers_auth_secure.go  handlers_lightclient.go  handlers_market.go  handlers_pools.go  handlers_swap.go  handlers_trading.go  handlers_wallet.go  middleware.go  nginx.conf  rate_limiter_advanced.go  rate_limiter_config.go  rate_limiter_test.go  routes.go  server.go  types.go  validation.go  websocket.go
app/: app.go  app_test.go  blockers_test.go  circuit_breaker_coordinator.go  circuit_breaker_coordinator_test.go  encoding.go  genesis.go  genesis_state.go  params.go  telemetry.go
archive/sdk/python/: README.md  pyproject.toml  setup.py
archive/sdk/python/examples/: basic_usage.py
archive/sdk/python/paw/: __init__.py  client.py  tx.py  types.py  wallet.py
archive/sdk/python/paw/modules/: __init__.py  bank.py  dex.py  governance.py  staking.py
archive/sdk/python/tests/: test_wallet.py
certs/: README.md
compose/: .env.example  README.md  docker-compose.2nodes.yml  docker-compose.3nodes.yml  docker-compose.4nodes-with-sentries.yml  docker-compose.4nodes.yml  docker-compose.certbot.yml  docker-compose.dashboards.yml  docker-compose.dev.yml  docker-compose.devnet.yml  docker-compose.flask-explorer.yml  docker-compose.logging.yml  docker-compose.monitoring.yml  docker-compose.tracing.yml  docker-compose.yml  setup-secrets.sh
config/: GENESIS_LAUNCH_CHECKLIST.md  README.md  app.toml.example  app.toml.template  gas_limits.yaml  genesis-README.md  genesis-mainnet.json  genesis-template.json  node-config.toml.template  rate_limits.example.yaml  rate_limits.yaml  validator-config.toml.template
control-center/: ALERTING_SYSTEM_DELIVERABLE.md  ARCHITECTURE.md  AUDIT_LOG_COMPLETION_REPORT.md  IMPLEMENTATION_SUMMARY.md  QUICK_REFERENCE.md  README.md  UNIFIED_CONTROL_CENTER_GUIDE.md  docker-compose.yml
docker/: .dockerignore  Dockerfile  Dockerfile.node  Dockerfile.release  Dockerfile.validator  README.md  docker-compose.yml  entrypoint.sh
docs/: ARCHITECTURE.md  BIP39_IMPLEMENTATION.md  BIP39_QUICK_START.md  BLOCK_EXPLORER.md  BUG_BOUNTY.md  CHANGELOG.md  CLI_DEX.md  CODING_CONVENTIONS.md  COSMWASM_INTEGRATION.md  COST_ESTIMATES.md  DASHBOARDS_GUIDE.md  DEPLOYMENT_QUICKSTART.md  DEPRECATION_POLICY.md  DEX_QUICK_START.md  DISASTER_RECOVERY.md  DISTRIBUTED_TRACING_GUIDE.md  ENVIRONMENT_VARIABLES.md  EXECUTIVE_SUMMARY.md  FAQ.md  GENESIS_CEREMONY.md  GOVERNANCE.md  IAVL_FIX_APPLIED.md  IAVL_INSPECTION_RESULTS.md  IAVL_QUERY_BUG_FIX.md  IAVL_STATE_QUERY_BUG.md  IBC_QUICK_START.md  INCIDENT_RESPONSE_PLAN.md  INCIDENT_RESPONSE_RUNBOOK.md  KEY_MANAGEMENT.md  KUBERNETES_INFRASTRUCTURE.md  LOAD_BALANCER.md  METRICS.md  MEV_PROTECTION.md  MIGRATION.md  MODULE_DEPENDENCIES.md  MODULE_DEVELOPMENT.md  MONITORING_QUICKREF.md  MULTI_CHAIN_INTEGRATION.md  MULTI_VALIDATOR_TESTNET.md  NETWORK_PORTS.md  (+38 more)
docs-site/: docusaurus.config.ts  sidebars.ts
explorer/: COMPREHENSIVE_DEX_EXPLORER_ANALYSIS.md  DEX_IMPLEMENTATION_REPORT.md  DEX_QUICK_START.md  QUICK_START_GUIDE.md  README.md  docker-compose.production.yml  docker-compose.yml  nginx.conf
faucet/: .env.example  .gitignore  README.md  docker-compose.yml
flask-app/: Dockerfile  app.py  nginx.conf  requirements.txt
helm/: INSTALLATION.md  QUICKREF.md  README.md  validate-chart.sh
ibc/: RELAYER_SECURITY.md  relayer-config.yaml
infra/: node-config.yaml  prometheus.yml  start-test-node.sh
k8s/: GENESIS_QUICK_REFERENCE.md  GENESIS_SECURITY.md  GENESIS_TESTING_GUIDE.md  LOCAL_TESTING_COMPLETE.md  LOCAL_TEST_RESULTS.md  README.md  all-services.yaml  argocd-app-paw.yaml  hpa.yaml  (+27 more)
sdk/python/cosmospy-protobuf/: LICENSE  MANIFEST.in  README.md  pyproject.toml
sdk/python/cosmospy-protobuf/cosmospy_protobuf/: __init__.py
sdk/python/cosmospy-protobuf/cosmospy_protobuf/cosmos/base/v1beta1/: coin_pb2.py
sdk/python/cosmospy-protobuf/cosmospy_protobuf/cosmos/crypto/multisig/v1beta1/: multisig_pb2.py
sdk/python/cosmospy-protobuf/cosmospy_protobuf/cosmos/crypto/secp256k1/: keys_pb2.py
sdk/python/cosmospy-protobuf/cosmospy_protobuf/cosmos/tx/signing/v1beta1/: signing_pb2.py
sdk/python/cosmospy-protobuf/cosmospy_protobuf/cosmos/tx/v1beta1/: tx_pb2.py
sdk/python/cosmospy-protobuf/cosmospy_protobuf/cosmos_proto/: cosmos_pb2.py
sdk/python/cosmospy-protobuf/scripts/: generate_protos.sh
(+2251 files in other folders)
